trained to make hangman-2 game

--- a/hangman2/index.html
+++ b/hangman2/index.html
@@ -4,6 +4,7 @@
     <head></head>
     <body>
         <h1>Guess the word</h1>
+        <input id="numWords" type="text" placeholder="Number of guess words">
         <p id="puzzle"></p>
         <p id="guesses"></p>
         <button id="reset">Reset</button>
